# RyzenAdj

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  argparse.c  argparse.cpp  argparse.h  config.c  config.h  libpci.cpp  main.c  main.cpp  meson.build  nb_smu_ops.cpp  ryzenadj  travis-win.bat  winring0.cpp
.github/workflows/: build.yml  linux.yml  main.yml  release.yml  windows.yml
RyzenAdjUI_WPF/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RyzenAdjUI_WPF.csproj
RyzenAdjUI_WPF/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
debian/: .gitignore  changelog  control  copyright  files  libryzenadj-dev.install  libryzenadj0.install  rules  ryzenadj.install  ryzenadj.postinst  ryzenadj.preinst  watch
debian/apparmor/: usr.bin.ryzenadj
debian/upstream/: metadata
examples/: pmtable-example.py  ptable-example.py  readjust.py
inc/: nb_smu_ops.h
lib/: CMakeLists.txt  PowerState.c  PowerState.h  api.c  cpuid.c  libpci.c  nb_smu_ops.c  nb_smu_ops.h  osdep_linux.c  osdep_linux_mem.h  osdep_linux_smu_kernel_module.c  osdep_linux_smu_kernel_module.h  osdep_win32.cpp  ryzenadj.h  ryzenadj_priv.h  ryzenadj_version.h.in  winring0.cpp
lib/linux/: osdep_linux.c  osdep_linux_mem.c  osdep_linux_mem.h  osdep_linux_smu_kernel_module.c  osdep_linux_smu_kernel_module.h
lib/win32/: osdep_win32.cpp
prebuilt/: demo.bat
scripts/: RyzenAdj.spec  RyzenAdjServiceTask.xml.template  installServiceTask.bat  readjustService.ps1
win32/: RyzenAdjServiceTask.xml.template  WinRing0x64.exp  demo.bat  installServiceTask.bat  readjustService.ps1  uninstallServiceTask.bat
